welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:0: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:3: error: not found: value YELLOW
	marque(c);avance();marque(YELLOW);avance();marque(c);recule();droite();avance();marque(c);recule(2);marque();
                                  ^FlowerPot:3: error: not enough arguments for method marque: (d: java.awt.Color)Unit.
Unspecified value parameter d.
	marque(c);avance();marque(YELLOW);avance();marque(c);recule();droite();avance();marque(c);recule(2);marque();
                                                                                                                  ^FlowerPot:5: error: value d is not a member of object java.awt.Color
def marque(d: Color){setCouleurBrosse(Color.d);baisseBrosse();leveBrosse()}
                                            ^